# Test_Infotecs

./: README.md
test_infotecs_1/: CMakeLists.txt  main.cpp  socket.cpp  socket.h  streams.cpp  streams.h  stringprocessing.cpp  stringprocessing.h
test_infotecs_2/: CMakeLists.txt  main.cpp  socket.cpp  socket.h
